# titania

./: .clang-format  .gitattributes  .gitignore  README.md  TODO.md  TRADEMARKS  meson.build  meson.options
descriptor/descriptor/: DualSense.txt  DualSenseEdge.txt
descriptor/lsusb/: DualSense.txt  DualSenseEdge.txt
descriptor/report/: report_1.txt  report_2.txt  report_31.txt
etc/: 70-libresense.rules
etc/udev/rules.d/: 70-dualsense.rules  71-dualsense-disable-touchpad.rules
include/: libresense.h  titania.h
man/: dualsense-hid.7.md  libresense-log.1.md  libresense.1.md  libresensectl.1.md  titania.1.md  titaniactl.1.md
misc/: merge-edge-profile.py
src/: access.c  access.h  cli.c  common.h  crc.c  edge.c  edge.h  enums.c  enums.h  hid.c  libresense.c  libresense_cli.c  libresense_edge.c  structures.h  trans.c  unicode.c  unicode.h
src/ctl/: libreprint.h  libresensectl.h  main.c  titaniactl.h  titaniaprint.h
src/ctl/modes/: access.c  bench.c  bt.c  dump.c  edge.c  json_helpers.h  led.c  profile.c  report.c  test.c
subprojects/: hidapi.wrap  libjson.wrap
