option('libresense_log', type: 'boolean', value: true)
option('libresense_ctl', type: 'boolean', value: true)
option('libresense_max_controllers', type: 'integer', min: 4, max: 31, value: 8)
option('libresense_debug', type: 'boolean', value: false)
option('libresense_man', type: 'boolean', value: true)
